Update posts with new website urls

--- a/_posts/2023-08-11-Webdev.md
+++ b/_posts/2023-08-11-Webdev.md
@@ -12,12 +12,10 @@ img_path: "/posts/20230811"
 LazyVim based config for web developers. JavaScript, Typescript, React, and Tailwind CSS support
 
 - Install and initialize: **`lazyman -L Webdev`**
-- Configuration category: [Language](https://github.com/doctorfree/nvim-lazyman#language-configurations)
+- Configuration category: [Language](https://lazyman.dev/configurations/#language-configurations)
 - Base configuration:     [LazyVim](https://lazyvim.github.io)
 - Plugin manager:         [Lazy](https://github.com/folke/lazy.nvim)
 - Installation location:  **`~/.config/nvim-Webdev`**
-
-[Links to all Lazyman supported configuration documents](https://github.com/doctorfree/nvim-lazyman/wiki/infodocs)
 
 ### Git repository
 
