--- a/_posts/2023-08-13-Penguin.md
+++ b/_posts/2023-08-13-Penguin.md
@@ -12,12 +12,10 @@ img_path: "/posts/20230813"
 Aims to provide a base configuration with beautiful UI and fast startup time
 
 - Install and initialize: **`lazyman -o`**
-- Configuration category: [Base](https://github.com/doctorfree/nvim-lazyman#base-configurations)
+- Configuration category: [Base](https://lazyman.dev/configurations/#base-configurations)
 - Base configuration:     [LazyVim](https://lazyvim.github.io)
 - Plugin manager:         [Lazy](https://github.com/folke/lazy.nvim)
 - Installation location:  **`~/.config/nvim-Penguin`**
-
-[Links to all Lazyman supported configuration documents](https://github.com/doctorfree/nvim-lazyman/wiki/infodocs)
 
 ### Git repository
 
