--- a/_posts/2023-08-15-LazyIde.md
+++ b/_posts/2023-08-15-LazyIde.md
@@ -12,12 +12,10 @@ img_path: "/posts/20230815"
 LazyVim IDE config for Neovim
 
 - Install and initialize: **`lazyman -L LazyIde`**
-- Configuration category: [Language](https://github.com/doctorfree/nvim-lazyman#language-configurations)
+- Configuration category: [Language](https://lazyman.dev/configurations/#language-configurations)
 - Base configuration:     [LazyVim](https://lazyvim.github.io)
 - Plugin manager:         [Lazy](https://github.com/folke/lazy.nvim)
 - Installation location:  **`~/.config/nvim-LazyIde`**
-
-[Links to all Lazyman supported configuration documents](https://github.com/doctorfree/nvim-lazyman/wiki/infodocs)
 
 ### Git repository
 
