--- a/_posts/2023-08-18-CatNvim.md
+++ b/_posts/2023-08-18-CatNvim.md
@@ -12,12 +12,10 @@ img_path: "/posts/20230818"
 Neovim configuration written in the [C programming language](https://en.wikipedia.org/wiki/C_(programming_language))
 
 - Install and initialize: **`lazyman -L CatNvim`**
-- Configuration category: [Language](https://github.com/doctorfree/nvim-lazyman#language-configurations)
+- Configuration category: [Language](https://lazyman.dev/configurations/#language-configurations)
 - Base configuration:     [LazyVim](https://lazyvim.github.io)
 - Plugin manager:         [Lazy](https://github.com/folke/lazy.nvim)
 - Installation location:  **`~/.config/nvim-CatNvim`**
-
-[Links to all Lazyman supported configuration documents](https://github.com/doctorfree/nvim-lazyman/wiki/infodocs)
 
 ### Git repository
 
