--- a/_posts/2023-08-20-LazyVim.md
+++ b/_posts/2023-08-20-LazyVim.md
@@ -12,12 +12,10 @@ img_path: "/posts/20230820"
 The [LazyVim starter](https://github.com/LazyVim/starter) configuration
 
 - Install and initialize: **`lazyman -l`**
-- Configuration category: [Base](https://github.com/doctorfree/nvim-lazyman#base-configurations)
+- Configuration category: [Base](https://lazyman.dev/configurations/#base-configurations)
 - Base configuration:     [LazyVim](https://lazyvim.github.io)
 - Plugin manager:         [Lazy](https://github.com/folke/lazy.nvim)
 - Installation location:  **`~/.config/nvim-LazyVim`**
-
-[Links to all Lazyman supported configuration documents](https://github.com/doctorfree/nvim-lazyman/wiki/infodocs)
 
 ### Git repository
 
