--- a/_posts/2023-08-12-Traap.md
+++ b/_posts/2023-08-12-Traap.md
@@ -12,12 +12,10 @@ img_path: "/posts/20230812"
 [Introductory video](https://youtu.be/aD9j6d9pgtc)
 
 - Install and initialize: **`lazyman -w Traap`**
-- Configuration category: [Personal](https://github.com/doctorfree/nvim-lazyman#personal-configurations)
+- Configuration category: [Personal](https://lazyman.dev/configurations/#personal-configurations)
 - Base configuration:     [LazyVim](https://lazyvim.github.io)
 - Plugin manager:         [Lazy](https://github.com/folke/lazy.nvim)
 - Installation location:  **`~/.config/nvim-Traap`**
-
-[Links to all Lazyman supported configuration documents](https://github.com/doctorfree/nvim-lazyman/wiki/infodocs)
 
 ### Git repository
 
